# AquiosEngine

./: .gitignore  .gitmodules  AquiosEngine.sln  AquiosEngine.slnx  CMakeLists.txt  LICENSE  README.md  imgui.ini  premake5.lua
engine/: AquiosEngine.vcxproj  AquiosEngine.vcxproj.filters  CMakeLists.txt  premake5.lua
engine/assets/shaders/glsl/: basic_fs.glsl  basic_vs.glsl
engine/src/: AquiosEngine.h  aqpch.h
engine/src/AquiosEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h  EventSystem.h  IDestructable.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  UUID.cpp  UUID.h  Window.h
engine/src/AquiosEngine/Assets/: Asset.cpp  Asset.h  AssetImporter.cpp  AssetImporter.h  AssetLoader.h  AssetMetadata.h  Assets.h  ShaderImporter.h
engine/src/AquiosEngine/Events/: ApplicationEvent.h  AssetEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
engine/src/AquiosEngine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
engine/src/AquiosEngine/Platform/OpenGL/: GLGPUBuffer.cpp  GLGPUBuffer.h  ImGuiOpenGLRenderer.cpp  OpenGLCommandBackend.cpp  OpenGLCommandBackend.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexLayout.cpp  OpenGLVertexLayout.h  Utils.h
engine/src/AquiosEngine/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
engine/src/AquiosEngine/Renderer/: Camera.h  CommandList.h  Commands.h  Format.h  Framebuffer.h  GPUBuffer.h  GraphicsContext.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OrthographicCamera.cpp  OrthographicCamera.h  Pipeline.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.h  Shader.cpp  Shader.h  Swapchain.h  Texture.h  Vertex.h  VertexLayout.h
sandbox/: CMakeLists.txt  Sandbox.vcxproj  imgui.ini  premake5.lua
sandbox/src/: SandboxApp.cpp  annex.txt
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
